# habit-tracker-tui

./: .gitignore  README.md  pyproject.toml
habit_tracker/: __init__.py  app.py  models.py  storage.py
scripts/: habits.1m.sh  install.ps1  install.sh  swiftbar_habits.py
