[project]
name = "habit-tracker-tui"
version = "0.1.0"
description = "A simple terminal UI habit tracker"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "textual>=3.0.0",
]

[project.scripts]
habits = "habit_tracker.app:main"

[build-system]
requires = ["setuptools>=61"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
where = ["."]
include = ["habit_tracker*"]
